--- a/page/assets/css/main.css
+++ b/page/assets/css/main.css
@@ -106,6 +106,27 @@ section {
   display: inline-block;
 }
 
+.banner{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.40),rgba(0,0,0,0.40));
+  background-position: center;
+  background-size: center;
+}
+
+.banner video{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+@media(min-aspect-ratio: 16/9){
+  .banner video{
+      width: 100%;
+      height: auto;
+  }
+}
+
 .section-title h2:before {
   margin: 0 15px 10px 0;
 }
@@ -818,6 +839,15 @@ section {
   -o-object-fit: cover;
   object-fit: cover;
   z-index: 1;
+}
+
+#slideshow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero:before {
