--- a/page/assets/css/main.css
+++ b/page/assets/css/main.css
@@ -858,6 +858,11 @@ section {
   z-index: 2;
 }
 
+.team {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 .hero .container {
   position: relative;
